# Elgiganten

./: .gitignore  conversation_manager.py  index.html  knowledge_base.py  main.py  pyproject.toml  requirements.txt  script.js  shopify_api.py  style.css
